[package]
name = "precompile-utils"
authors = { workspace = true }
description = "Utils to write EVM precompiles."
edition = { workspace = true }
version = "0.1.0"

[dependencies]
derive_more = { workspace = true, optional = true, features = ["display"], default-features = false }
environmental = { workspace = true, default-features = false }
hex = { workspace = true, default-features = false }
hex-literal = { workspace = true, optional = true }
impl-trait-for-tuples = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
num_enum = { workspace = true, default-features = false }
scale-info = { workspace = true, optional = true, features = ["derive"], default-features = false }
serde = { workspace = true, optional = true, default-features = false }
similar-asserts = { workspace = true, optional = true, default-features = false }

# Moonbeam
precompile-utils-macro = { path = "macro", default-features = false }

# Substrate
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
scale-codec = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-weights = { workspace = true, default-features = false }

# Frontier
evm = { workspace = true, features = ["with-codec"], default-features = false }
fp-evm = { workspace = true, default-features = false }
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"], default-features = false }

# Polkadot / XCM
xcm = { workspace = true, optional = true, default-features = false }

[dev-dependencies]
hex-literal = { workspace = true, default-features = false }
xcm = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"environmental/std",
	"fp-evm/std",
	"frame-support/std",
	"frame-system/std",
	"pallet-evm/std",
	"scale-codec/std",
	"sp-core/std",
	"sp-io/std",
	"xcm?/std",
]
codec-xcm = ["xcm"]
testing = ["derive_more", "hex-literal", "scale-info", "serde", "similar-asserts", "std"]
