[package]
name = "fc-aura"
version = "1.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Frontier Aura Consensus Data Provider"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# Substrate
sc-client-api = { workspace = true, default-features = false }
sc-consensus-aura = { workspace = true, default-features = false }
sp-api = { workspace = true, features = ["default"], default-features = false }
sp-consensus-aura = { workspace = true, features = ["default"], default-features = false }
sp-inherents = { workspace = true, features = ["default"], default-features = false }
sp-runtime = { workspace = true, features = ["default"], default-features = false }
sp-timestamp = { workspace = true, features = ["default"], default-features = false }
# Frontier
fc-rpc = { workspace = true, default-features = false }
fp-storage = { workspace = true, features = ["default"], default-features = false }
