[package]
name = "fc-babe"
version = "1.0.0-dev"
authors = { workspace = true }
edition = { workspace = true }
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = { workspace = true }
description = "Babe consensus data provider for pending runtime calls"

[dependencies]
# Substrate
sp-api = { workspace = true }
sp-consensus-babe = { workspace = true }
sp-inherents = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus-babe = { workspace = true }
# Frontier
fc-rpc = { workspace = true }

