[package]
name = "fc-babe"
version = "1.0.0-dev"
authors = { workspace = true }
edition = { workspace = true }
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = { workspace = true }
description = "Babe consensus data provider for pending runtime calls"

[dependencies]
# Substrate
sc-client-api = { workspace = true, default-features = false }
sc-consensus-babe = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-blockchain = { workspace = true, default-features = false }
sp-consensus-babe = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-timestamp = { workspace = true, default-features = false }
# Frontier
fc-rpc = { workspace = true, default-features = false }
