[package]
name = "fc-cli"
version = "1.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Frontier CLI interface"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
clap = { workspace = true, default-features = false }
ethereum-types = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true, default-features = false }
# Substrate
sc-cli = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-blockchain = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
# Frontier
fc-db = { workspace = true, default-features = false }
fp-rpc = { workspace = true, features = ["default"], default-features = false }
fp-storage = { workspace = true, features = ["default"], default-features = false }

[dev-dependencies]
futures = { workspace = true, default-features = false }
scale-codec = { workspace = true, default-features = false }
tempfile = "3.20"
# Substrate
sc-block-builder = { workspace = true, default-features = false }
sc-client-db = { workspace = true, features = ["rocksdb"], default-features = false }
sp-consensus = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
substrate-test-runtime-client = { workspace = true, default-features = false }
# Frontier
fc-api = { workspace = true, default-features = false }
fc-db = { workspace = true, features = ["rocksdb"], default-features = false }
frontier-template-runtime = { workspace = true, features = ["default"], default-features = false }

[features]
default = ["rocksdb"]
rocksdb = [
	"sc-cli/rocksdb",
	"fc-db/rocksdb",
]
