[package]
name = "fc-consensus"
version = "2.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Frontier consensus for substrate."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { workspace = true, default-features = false }
thiserror = { workspace = true, default-features = false }
# Substrate
sc-consensus = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false}
sp-block-builder = { workspace = true, features = ["default"], default-features = false }
sp-consensus = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
# Frontier
fp-consensus = { workspace = true, features = ["default"], default-features = false }
fp-rpc = { workspace = true, features = ["default"], default-features = false }
