[package]
name = "fc-db"
version = "2.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Frontier database backend"
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { workspace = true, default-features = false }
ethereum = { workspace = true, features = ["with-scale"], optional = true, default-features = false }
futures = { workspace = true, optional = true, default-features = false }
kvdb-rocksdb = { workspace = true, optional = true, default-features = false }
log = { workspace = true, default-features = false }
parity-db = { workspace = true, default-features = false }
parking_lot = { workspace = true, default-features = false }
scale-codec = { workspace = true, default-features = false }
smallvec = { workspace = true, optional = true, default-features = false }
sqlx = { workspace = true, features = ["runtime-tokio-native-tls", "sqlite"], optional = true, default-features = false }
tokio = { workspace = true, features = ["macros", "sync"], optional = true, default-features = false }
# Substrate
sc-client-api = { workspace = true, optional = true, default-features = false }
sc-client-db = { workspace = true, default-features = false }
sp-api = { workspace = true, optional = true, default-features = false }
sp-blockchain = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-database = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
# Frontier
fc-api = { workspace = true, default-features = false }
fc-storage = { workspace = true, optional = true, default-features = false }
fp-consensus = { workspace = true, features = ["default"], optional = true, default-features = false }
fp-rpc = { workspace = true, features = ["default"], optional = true, default-features = false }
fp-storage = { workspace = true, features = ["default"], default-features = false }

[dev-dependencies]
futures = { workspace = true, default-features = false }
maplit = { version = "1.0.2", default-features = false }
tempfile = { version = "3.20", default-features = false }
# Substrate
sc-block-builder = { workspace = true, default-features = false }
sp-consensus = { workspace = true, default-features = false }
substrate-test-runtime-client = { workspace = true, default-features = false }

[features]
default = ["rocksdb"]
rocksdb = [
	"kvdb-rocksdb",
	"sc-client-db/rocksdb",
	"smallvec",
]
sql = [
	"ethereum",
	"futures",
	"sqlx",
	"tokio",
	"sc-client-api",
	"sp-api",
	"fc-storage",
	"fp-consensus",
	"fp-rpc",
]
