[package]
name = "fc-rpc-core"
version = "1.1.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "RPC traits of Ethereum."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { workspace = true, features = ["with-scale", "with-serde"], default-features = false }
ethereum-types = { workspace = true, default-features = false }
jsonrpsee = { workspace = true, features = ["server", "macros"], default-features = false }
rlp = { workspace = true, default-features = false }
rustc-hex = { workspace = true, default-features = false }
serde = { workspace = true, default-features = false }
serde_json = { workspace = true, default-features = false }

# Substrate
sp-crypto-hashing = { workspace = true, features = ["default"], default-features = false }

[features]
txpool = []
