[package]
name = "fc-storage"
version = "1.0.0-dev"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
description = "Ethereum storage compatibility layer for Substrate."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { workspace = true, features = ["with-scale"], default-features = false }
ethereum-types = { workspace = true, default-features = false }
scale-codec = { workspace = true, default-features = false }

# Substrate
sc-client-api = { workspace = true, default-features = false }
sp-api = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-storage = { workspace = true, default-features = false }
# Frontier
fp-rpc = { workspace = true, features = ["default"], default-features = false }
fp-storage = { workspace = true, features = ["default"], default-features = false }
