[package]
name = "pallet-base-fee"
version = "1.0.0"
license = "Apache-2.0"
description = "EIP-1559 fee utils."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
# Substrate
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
# Frontier
fp-evm = { workspace = true, default-features = false }

[dev-dependencies]
# Substrate
sp-io = { workspace = true, features = ["default"], default-features = false }

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	# Frontier
	"fp-evm/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
