[package]
name = "pallet-dynamic-fee"
version = "4.0.0-dev"
license = "Apache-2.0"
description = "Dynamic fee handling for EVM."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
# Substrate
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-inherents = { workspace = true, default-features = false }
# Frontier
fp-dynamic-fee = { workspace = true, default-features = false }
fp-evm = { workspace = true, default-features = false }

[dev-dependencies]
# Substrate
pallet-timestamp = { workspace = true, features = ["default"], default-features = false }
sp-io = { workspace = true, features = ["default"], default-features = false }
sp-runtime = { workspace = true, features = ["default"], default-features = false }

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"sp-core/std",
	"sp-inherents/std",
	# Substrate
	"frame-system/std",
	"frame-support/std",
	# Frontier
	"fp-dynamic-fee/std",
	"fp-evm/std",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
