[package]
name = "pallet-ethereum"
version = "4.0.0-dev"
license = "Apache-2.0"
description = "Ethereum compatibility full block processing emulation pallet for Substrate."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { workspace = true, features = ["with-scale"], default-features = false }
ethereum-types = { workspace = true, default-features = false }
evm = { workspace = true, features = ["with-codec"], default-features = false }
scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
# Substrate
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-version = { workspace = true, default-features = false }
# Frontier
fp-consensus = { workspace = true, default-features = false }
fp-ethereum = { workspace = true, default-features = false }
fp-evm = { workspace = true, default-features = false }
fp-rpc = { workspace = true, default-features = false }
fp-storage = { workspace = true, default-features = false }
pallet-evm = { workspace = true, default-features = false }

[dev-dependencies]
hex = { workspace = true, default-features = false }
libsecp256k1 = { workspace = true, features = ["static-context", "hmac"], default-features = false }
rlp = { workspace = true, default-features = false }
# Substrate
pallet-balances = { workspace = true, features = ["default", "insecure_zero_ed"], default-features = false }
pallet-timestamp = { workspace = true, features = ["default"], default-features = false }
sp-core = { workspace = true, features = ["default"], default-features = false }
# Frontier
fp-self-contained = { workspace = true, features = ["default"], default-features = false }

[features]
default = ["std"]
std = [
	"ethereum/std",
	"evm/std",
	"ethereum-types/std",
	"rlp/std",
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"frame-support/std",
	"frame-system/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-version/std",
	# Frontier
	"fp-consensus/std",
	"fp-ethereum/std",
	"fp-evm/std",
	"fp-rpc/std",
	"fp-storage/std",
	"pallet-evm/std",
]
runtime-benchmarks = [
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-evm/try-runtime",
]
forbid-evm-reentrancy = ["pallet-evm/forbid-evm-reentrancy"]
