[package]
name = "pallet-evm"
version = "6.0.0-dev"
license = "Apache-2.0"
readme = "README.md"
description = "FRAME EVM contracts pallet."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
environmental = { workspace = true, optional = true, default-features = false }
evm = { workspace = true, features = ["with-codec"], default-features = false }
hash-db = { workspace = true, default-features = false }
hex-literal = { workspace = true, default-features = false }
impl-trait-for-tuples = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }

# Cumulus
cumulus-primitives-storage-weight-reclaim = { workspace = true, default-features = false }

# Substrate
frame-benchmarking = { workspace = true, optional = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
# Frontier
fp-account = { workspace = true, default-features = false }
fp-evm = { workspace = true, features = ["serde"], default-features = false }

[dev-dependencies]
hex = { workspace = true, default-features = false }
# Substrate
pallet-balances = { workspace = true, features = ["default", "insecure_zero_ed"], default-features = false }
pallet-evm-precompile-simple = { workspace = true, features = ["default"], default-features = false }
pallet-timestamp = { workspace = true, features = ["default"], default-features = false }

[features]
default = ["std"]
std = [
	"environmental?/std",
	"evm/std",
	"evm/serde",
	"hex/std",
	"log/std",
	"scale-codec/std",
	"scale-info/std",
	# Cumulus
	"cumulus-primitives-storage-weight-reclaim/std",
	# Substrate
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	# Frontier
	"fp-account/std",
	"fp-evm/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
]
forbid-evm-reentrancy = ["dep:environmental"]
