[package]
name = "pallet-hotfix-sufficients"
version = "1.0.0"
license = "Apache-2.0"
readme = "README.md"
description = "Hotfix zero-value account sufficients with non-zero-value nonces."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
# Substrate
frame-benchmarking = { workspace = true, optional = true, default-features = false }
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
# Frontier
pallet-evm = { workspace = true, default-features = false }

[dev-dependencies]
# Substrate
sp-io = { workspace = true, features = ["default"], default-features = false }

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"frame-benchmarking?/std",
	"frame-support/std",
	"frame-system/std",
	"sp-core/std",
	"sp-runtime/std",
	# Frontier
	"pallet-evm/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-support/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-evm/runtime-benchmarks",
]
try-runtime = [
	"frame-support/try-runtime",
	"frame-system/try-runtime",
	"pallet-evm/try-runtime",
]
