[package]
name = "precompile-utils-macro"
authors = { workspace = true }
description = ""
edition = { workspace = true }
version = "0.1.0"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
case = { workspace = true }
num_enum = { workspace = true }
prettyplease = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
sp-crypto-hashing = { workspace = true }
syn = { workspace = true }

[dev-dependencies]
macrotest = "1.0.13"
trybuild = "1.0"

precompile-utils = { path = "../", features = ["testing"] }

fp-evm = { workspace = true }
frame-support = { workspace = true }
