[package]
name = "precompile-utils-macro"
authors = { workspace = true }
description = ""
edition = { workspace = true }
version = "0.1.0"

[lib]
proc-macro = true

[[test]]
name = "tests"
path = "tests/tests.rs"

[dependencies]
case = { workspace = true, default-features = false }
num_enum = { workspace = true, default-features = false }
prettyplease = { workspace = true, default-features = false }
proc-macro2 = { workspace = true, default-features = false }
quote = { workspace = true, default-features = false }
sp-crypto-hashing = { workspace = true, default-features = false }
syn = { workspace = true, default-features = false }

[dev-dependencies]
macrotest = { version = "1.0.13", default-features = false }
trybuild = { version = "1.0", default-features = false }

precompile-utils = { path = "../", features = ["testing"], default-features = false }

fp-evm = { workspace = true, default-features = false }
frame-support = { workspace = true, default-features = false }
