[package]
name = "precompile-utils-tests-external"
authors = { workspace = true }
edition = { workspace = true }
version = "0.1.0"

[lib]
path = "./lib.rs"

[dependencies]
evm = { workspace = true, features = ["with-codec"], default-features = false }
hex-literal = { workspace = true, default-features = false }
scale-codec = { workspace = true, features = ["max-encoded-len"], default-features = false }
scale-info = { workspace = true, features = ["derive"], default-features = false }
# Substrate
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
# Substrate FRAME
frame-support = { workspace = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-balances = { workspace = true, features = ["insecure_zero_ed"], default-features = false }
pallet-timestamp = { workspace = true, default-features = false }
# Frontier
fp-evm = { workspace = true, default-features = false }
pallet-evm = { workspace = true, features = ["forbid-evm-reentrancy"], default-features = false }
precompile-utils = { workspace = true, features = ["testing"], default-features = false }
