[package]
name = "fp-account"
version = "1.0.0-dev"
license = "Apache-2.0"
description = "Primitives for Frontier AccountId20."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
hex = { workspace = true, default-features = false }
impl-serde = { workspace = true, optional = true, default-features = false }
libsecp256k1 = { workspace = true, default-features = false }
log = { workspace = true, default-features = false }
scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
serde = { workspace = true, optional = true, default-features = false }

# Substrate
sp-core = { workspace = true, default-features = false }
sp-io = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-runtime-interface = { workspace = true, default-features = false }

# Polkadot / XCM
xcm = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"hex/std",
	"impl-serde/std",
	"libsecp256k1/std",
	"log/std",
	"scale-codec/std",
	"scale-info/std",
	"serde/std",
	# Substrate
	"sp-core/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-runtime-interface/std",
	"xcm/std",
]
serde = [
	"dep:serde",
	"impl-serde",
	"scale-info/serde",
	"sp-core/serde",
	"sp-runtime/serde",
]
