[package]
name = "fp-consensus"
version = "2.0.0-dev"
license = "Apache-2.0"
description = "Primitives for Frontier consensus."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[dependencies]
ethereum = { workspace = true, features = ["with-scale"], default-features = false }
scale-codec = { workspace = true, default-features = false }
# Substrate
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"ethereum/std",
	"scale-codec/std",
	# Substrate
	"sp-core/std",
	"sp-runtime/std",
]
