[package]
name = "fp-ethereum"
version = "1.0.0-dev"
license = "Apache-2.0"
description = "Primitive Ethereum types."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { workspace = true, features = ["with-scale"], default-features = false }
ethereum-types = { workspace = true, default-features = false }
scale-codec = { workspace = true, default-features = false }
# Substrate
frame-support = { workspace = true, default-features = false }
# Frontier
fp-evm = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"ethereum/std",
	"ethereum-types/std",
	"scale-codec/std",
	# Substrate
	"frame-support/std",
	# Frontier
	"fp-evm/std",
]
