[package]
name = "fp-evm"
version = "3.0.0-dev"
license = "Apache-2.0"
description = "Primitive EVM abstractions for Substrate."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
environmental = { workspace = true, default-features = false }
evm = { workspace = true, features = ["with-codec"], default-features = false }
num_enum = { workspace = true, default-features = false }
scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
serde = { workspace = true, optional = true, default-features = false }

# Substrate
frame-support = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"evm/std",
	"evm/with-serde",
	"environmental/std",
	"num_enum/std",
	"serde/std",
	"scale-codec/std",
	# Substrate
	"frame-support/std",
	"sp-core/std",
	"sp-runtime/std",
]
serde = [
	"dep:serde",
	"evm/with-serde",
	"scale-info/serde",
	"sp-core/serde",
	"sp-runtime/serde",
]
