[package]
name = "fp-rpc"
version = "3.0.0-dev"
license = "Apache-2.0"
description = "Runtime primitives for Ethereum RPC (web3) compatibility layer for Substrate."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
ethereum = { workspace = true, features = ["with-scale"], default-features = false }
ethereum-types = { workspace = true, default-features = false }
scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
# Substrate
sp-api = { workspace = true, default-features = false }
sp-core = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }
sp-state-machine = { workspace = true, default-features = false }
# Frontier
fp-evm = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"ethereum/std",
	"ethereum-types/std",
	"scale-codec/std",
	"scale-info/std",
	# Substrate
	"sp-api/std",
	"sp-state-machine/std",
	"sp-core/std",
	"sp-runtime/std",
	# Frontier
	"fp-evm/std",
]
