[package]
name = "fp-self-contained"
version = "1.0.0-dev"
license = "Apache-2.0"
description = "Primitive Ethereum abstractions for Substrate."
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
scale-codec = { workspace = true, default-features = false }
scale-info = { workspace = true, default-features = false }
serde = { workspace = true, optional = true, default-features = false }
# Substrate
frame-support = { workspace = true, default-features = false }
sp-runtime = { workspace = true, default-features = false }

[features]
default = ["std"]
std = [
	"scale-codec/std",
	"scale-info/std",
	"serde/std",
	# Substrate
	"frame-support/std",
	"sp-runtime/std",
]
serde = [
	"dep:serde",
	"scale-info/serde",
	"sp-runtime/serde",
]
try-runtime = [
	"sp-runtime/try-runtime",
]
