[package]
name = "frontier-template-node"
version = "0.0.0"
license = "Unlicense"
build = "build.rs"
description = "A fresh FRAME-based Substrate node, ready for hacking."
publish = false
authors = { workspace = true }
edition = { workspace = true }
repository = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
async-trait = { workspace = true, default-features = false }
clap = { workspace = true, default-features = false }
futures = { workspace = true, default-features = false }
hex-literal = { workspace = true, default-features = false }
jsonrpsee = { workspace = true, features = ["server", "macros"], default-features = false }
log = { workspace = true, default-features = false }
scale-codec = { workspace = true, default-features = false }
serde_json = { workspace = true, features = ["arbitrary_precision"], default-features = false }

# Substrate
prometheus-endpoint = { workspace = true, default-features = false }
sc-basic-authorship = { workspace = true, default-features = false }
sc-chain-spec = { workspace = true, default-features = false }
sc-cli = { workspace = true, default-features = false }
sc-client-api = { workspace = true, default-features = false }
sc-consensus = { workspace = true, default-features = false }
sc-consensus-aura = { workspace = true, default-features = false }
sc-consensus-grandpa = { workspace = true, default-features = false }
sc-consensus-manual-seal = { workspace = true, default-features = false }
sc-executor = { workspace = true, default-features = false }
sc-network = { workspace = true, default-features = false }
sc-network-sync = { workspace = true, default-features = false }
sc-offchain = { workspace = true, default-features = false }
sc-rpc = { workspace = true, default-features = false }
sc-service = { workspace = true, default-features = false }
sc-telemetry = { workspace = true, default-features = false }
sc-transaction-pool = { workspace = true, default-features = false }
sc-transaction-pool-api = { workspace = true, default-features = false }
sp-api = { workspace = true, features = ["default"], default-features = false }
sp-block-builder = { workspace = true, default-features = false }
sp-blockchain = { workspace = true, default-features = false }
sp-consensus-aura = { workspace = true, features = ["default"], default-features = false }
sp-consensus-grandpa = { workspace = true, features = ["default"], default-features = false }
sp-core = { workspace = true, features = ["default"], default-features = false }
sp-inherents = { workspace = true, features = ["default"], default-features = false }
sp-io = { workspace = true, features = ["default"], default-features = false }
sp-offchain = { workspace = true, features = ["default"], default-features = false }
sp-runtime = { workspace = true, features = ["default"], default-features = false }
sp-session = { workspace = true, features = ["default"], default-features = false }
sp-timestamp = { workspace = true, features = ["default"], default-features = false }
sp-transaction-pool = { workspace = true, features = ["default"], default-features = false }
# These dependencies are used for RPC
frame-system-rpc-runtime-api = { workspace = true, default-features = false }
pallet-transaction-payment-rpc = { workspace = true, default-features = false }
pallet-transaction-payment-rpc-runtime-api = { workspace = true, default-features = false }
substrate-frame-rpc-system = { workspace = true, default-features = false }
# These dependencies are used for runtime benchmarking
frame-benchmarking = { workspace = true, optional = true, default-features = false }
frame-benchmarking-cli = { workspace = true, optional = true, default-features = false }
frame-system = { workspace = true, default-features = false }
pallet-transaction-payment = { workspace = true, default-features = false }

# Frontier
fc-api = { workspace = true, default-features = false }
fc-aura = { workspace = true, default-features = false }
fc-cli = { workspace = true, default-features = false }
fc-consensus = { workspace = true, default-features = false }
fc-db = { workspace = true, default-features = false }
fc-mapping-sync = { workspace = true, default-features = false }
fc-rpc = { workspace = true, default-features = false }
fc-rpc-core = { workspace = true, default-features = false }
fc-storage = { workspace = true, default-features = false }
fp-account = { workspace = true, default-features = false }
fp-dynamic-fee = { workspace = true, features = ["default"], default-features = false }
fp-evm = { workspace = true, features = ["default"], default-features = false }
fp-rpc = { workspace = true, features = ["default"], default-features = false }
frontier-template-runtime = { workspace = true, features = ["std"], default-features = false }

# Cumulus primitives
cumulus-pallet-weight-reclaim = { workspace = true, default-features = false }
cumulus-primitives-proof-size-hostfunction = { workspace = true, default-features = false }

[build-dependencies]
substrate-build-script-utils = { workspace = true, default-features = false }

[features]
default = [
	"rocksdb",
	"sql",
	"txpool",
	"rpc-binary-search-estimate",
]
rocksdb = [
	"sc-cli/rocksdb",
	"sc-service/rocksdb",
	"fc-cli/rocksdb",
	"fc-db/rocksdb",
	"fc-mapping-sync/rocksdb",
	"fc-rpc/rocksdb",
	"frontier-template-runtime/with-rocksdb-weights",
]
paritydb = [
	"frontier-template-runtime/with-paritydb-weights",
]
sql = [
	"fc-db/sql",
	"fc-mapping-sync/sql",
]
txpool = ["fc-rpc/txpool"]
rpc-binary-search-estimate = ["fc-rpc/rpc-binary-search-estimate"]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
	"sc-service/runtime-benchmarks",
	"frontier-template-runtime/runtime-benchmarks",
]
